# icu4x_compile_sample

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: lib.rs  structs.rs
experimental_data/: Cargo.toml
experimental_data/data/: helper.rs.data  includebytes.rs.data  mod.rs  triebytes.raw.data  units_info_v1_marker.rs.data
experimental_data/src/: lib.rs
