[workspace]
members = [
	"demo",
    "experimental_data",
]

[workspace.dependencies]
icu_experimental = { path = "../../projects/icu4x/components/experimental", default-features = false }
icu_locale = { path = "../../projects/icu4x/components/locale", default-features = false }
icu_provider_baked = { path = "../../projects/icu4x/provider/baked", default-features = false }
