[workspace]
resolver = "2"
members = [
	"demo",
    "experimental_data",
]

[workspace.dependencies]
icu_locale = { path = "../../projects/icu4x/components/locale", default-features = false }
icu_provider = { path = "../../projects/icu4x/provider/core", default-features = false }
icu_plurals = { path = "../../projects/icu4x/components/plurals", default-features = false }
icu_provider_baked = { path = "../../projects/icu4x/provider/baked", default-features = false }
zerovec = { path = "../../projects/icu4x/utils/zerovec", default-features = false }
