# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "experimental_data"
description = "Data for the icu_experimental crate"
license = "Unicode-3.0"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(icu4x_custom_data)'] }

[dependencies]
icu_provider_baked = { path = "../../../projects/icu4x/provider/baked" }
icu_locale = { path = "../../../projects/icu4x/components/locale" }
